# ai.shell

./: .gitignore  CHANGELOG.md  MAP.md  README.md  README.ru.md  ai.ini  ai.ini.default  ai.ini.example  ai.py  logo.ascii  pyproject.toml  requirements.txt
locales/: en.toml  ru.toml
modules/: agent.py  api.py  chat.py  colors.py  commands.py  completer.py  config.py  counter.py  locale.py  logger.py  logo.py  parser.py  setup.py  shell.py  single_turn.py  skills.py  spinner.py  state.py  symbols.py  telegram.py  text.py  ui.py  updates.py  version.py
providers/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  openai.py  openrouter.py  xai.py
scripts/: gen_map.py
skills/code-explain/: code-explain.md
skills/code-review/: code-review.md
skills/skill-creator/: skill-creator.md
